manifests/account/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-account
spec:
  progressDeadlineSeconds: 2400
  selector:
    matchLabels:
      app: chat-app-account
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: chat-app-account
    spec:
      containers:
        - name: chat-app-account
          image: cyrildavif/chat_app_account:8962333
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi

          ports:
            - containerPort: 8081

          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
