manifests/account/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-account-svc
spec:
  selector:
    app: chat-app-account
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: NodePort
